<resources>
    <string name="app_name">Restaurant List</string>
    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="meal_name">Meal</string>
    <string name="meal_price">Price: </string>
    <string name="available_meals">Choose your meals</string>
    <string name="Howmanywillyouask">How many will you order ?</string>
    <string name="num">Enter the number</string>
    <string name="enter">Add To Chart</string>
    <string name="check_out">Check Out</string>
    <string name="Place">Place your order</string>
    <string name="order_sucess">Order places successfully and will arrive to you soon</string>
    <string name="thanks">Thanks for chooising us</string>
    <string name="favourites">Favourites Menu</string>
    <string name="FavouriteMeals">Favourite Meals</string>
    <string name="about_us">About Us</string>
    <string name="feedback">FeedBack</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>
