<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddToChart">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/messi"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"
        android:text="@string/meal_name"
        />
    <!--android:textSize="25sp"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/price"
        android:textColor="@color/black"
        android:text="@string/meal_price"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:textSize="20sp"
        />
    <!--android:textSize="20sp"-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Howmanywillyouask"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        />
    <!--android:textSize="20sp"-->
    <EditText
        android:id="@+id/num_of_meal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/num"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:inputType="number"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <!--android:textSize="20sp"-->

        <Button
            android:id="@+id/chart_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center"
            android:text="@string/enter"
            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:layout_width="60dp"
        android:clickable="true"
        app:fabSize="auto"
        android:layout_height="60dp"
        app:backgroundTint="@color/white"
        android:elevation="6dp"
        app:borderWidth="0dp"
        app:fabCustomSize="60dp"
        app:pressedTranslationZ="1dp"
        android:layout_gravity="end|center"
        android:layout_margin="16dp"
        />


</LinearLayout>