<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight=".10">

                <TextView
                    android:id="@+id/text_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/recipeName"
                    android:textSize="21sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/method"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="23dp"
                    android:text="@string/recipeName"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">
                tools:context=".MainActivity"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/header_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/available_meals"
                    android:padding="5dp"
                    android:layout_margin="5dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/colorAccent"
                    />
                <ProgressBar
                    android:id="@+id/myProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminate="true"
                    android:indeterminateBehavior="cycle"
                    android:visibility="gone"
                    />
                <ListView
                    android:id="@+id/meal_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:numColumns="auto_fit"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/check_out"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/check_out"
                android:layout_weight=".05"/>
        </LinearLayout>




    </LinearLayout>


</LinearLayout>